--- a/Helplinev2/finalui/.env.example
+++ b/Helplinev2/finalui/.env.example
@@ -15,4 +15,6 @@ VITE_TURN_PASSWORD=
 
 # API Configuration
 VITE_API_BASE_URL=/api-proxy
+VITE_BACKEND_URL=https://demo-openchs.bitz-itc.com
+VITE_BACKEND_PATH=/helpline
 VITE_API_KEY=
