updated docker compose

--- a/Helplinev2/finalui/.env.example
+++ b/Helplinev2/finalui/.env.example
@@ -18,3 +18,13 @@ VITE_API_BASE_URL=/api-proxy
 VITE_BACKEND_URL=https://demo-openchs.bitz-itc.com
 VITE_BACKEND_PATH=/helpline
 VITE_API_KEY=
+
+# Notifications Service Override
+# VITE_ATI_URL=https://192.168.10.3:8384
+
+# Asterisk Credentials
+VITE_ASTERISK_USERNAME=
+VITE_ASTERISK_PASSWORD=
+
+# SIP Credential Prefix
+VITE_VA_SIP_PASS_PREFIX=23kdefrtgos09812100
