--- a/Helplinev2/finalui/nginx.conf
+++ b/Helplinev2/finalui/nginx.conf
@@ -4,6 +4,51 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # API Proxy - Forward requests to backend
+    location /api-proxy/ {
+        proxy_pass https://192.168.8.13/helpline/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_ssl_verify off;
+        proxy_ssl_session_reuse on;
+    }
+
+    # WebSocket proxies (convert wss:// to https:// for proxy_pass)
+    location /ws/ {
+        proxy_pass https://192.168.8.13/ws/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_ssl_verify off;
+    }
+
+    location /ami/ {
+        proxy_pass https://192.168.8.13:8384/ami/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_ssl_verify off;
+    }
+
+    location /ati/ {
+        proxy_pass https://192.168.8.13:8384/ati/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_ssl_verify off;
+    }
+
     # Serve everything from root - Vite build puts files there
     location / {
         try_files $uri $uri/ /index.html;
